--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,4 @@
+// Here goes your CSS
 @import 'layout/main';
 h1 {
     font-family: 'Lobster', cursive;
@@ -75,7 +76,13 @@ h1 {
     margin-left: 12px;
   }
 
-  .error-form {
-    color:red;
-    visibility: hidden;
+  .message{
+    //appearance:none;
+    background:transparent;
+    //border:0;
+    font-family:'Lobster', cursive;
+    font-size:42px;
+    height:60px;
+    //outline:none;
+    padding:0 20px;
   }
